--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css'
+
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <!DOCTYPE html>
@@ -22,10 +25,16 @@ import '../styles/global.css'
       crossorigin="anonymous"></script>
     <script>
       import AOS from 'aos'
-      AOS.init()
+      AOS.init({
+        once: true,
+      })
     </script>
   </head>
   <body>
-    <slot />
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
