--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,8 @@
-@import url('https://use.typekit.net/ulq6snh.css');
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Montserrat&display=swap');
 
 /* AOS */
-
 @import 'aos/dist/aos.css';
-
-[data-aos='fade-out'][data-aos='fade-out'] {
-  opacity: 1;
-  transition-property: opacity;
-}
-[data-aos='fade-out'][data-aos='fade-out'].aos-animate {
-  opacity: 0;
-}
-
-/* Tailwind */
 
 :root {
   --clr-gray-100: rgb(252, 252, 255); /* Hex: #fcfcff */
@@ -33,57 +23,103 @@
 
   --aurora-orange: radial-gradient(
       215.87% 215.87% at -9.39% 100%,
-      rgba(var(--clr-accent-m), 1) 0%,
-      rgba(var(--clr-accent-o), 0) 100%
+      rgba(179, 60, 134, 1) 0%,
+      rgba(238, 108, 77, 0) 100%
     ),
     radial-gradient(
       144.78% 144.78% at 81.62% 100%,
-      rgba(var(--clr-accent-y), 1) 0%,
-      rgba(var(--clr-accent-o), 0) 100%
+      rgba(255, 200, 87, 1) 0%,
+      rgba(238, 108, 77, 0) 100%
     ),
-    rgba(var(--clr-accent-o), 1);
+    rgba(238, 108, 77, 1);
 
   --aurora-blue: radial-gradient(
       164.48% 164.48% at -8.11% 121.61%,
-      rgba(var(--clr-accent-b), 1) 0%,
-      rgba(var(--clr-accent-p), 0) 100%
+      rgba(0, 114, 163, 1) 0%,
+      rgba(155, 119, 187, 0) 100%
     ),
     radial-gradient(
       150.1% 248.05% at 100% 100%,
-      rgba(var(--clr-accent-g), 1) 0%,
-      rgba(var(--clr-accent-p), 0) 100%
+      rgba(97, 231, 134, 1) 0%,
+      rgba(155, 119, 187, 0) 100%
     ),
-    rgba(var(--clr-accent-p), 1);
+    rgba(155, 119, 187, 1);
 
-  --shadow: 1px 2px 4px rgba(var(--clr-gray-800), 0.1),
-    2px 4px 8px rgba(var(--clr-gray-800), 0.15),
-    3px 8px 16px rgba(var(--clr-gray-800), 0.2),
-    4px 16px 32px rgba(var(--clr-gray-800), 0.25);
+  --shadow: 1px 2px 4px rgba(38, 40, 42, 0.1),
+    2px 4px 8px rgba(38, 40, 42, 0.15), 3px 8px 16px rgba(38, 40, 42, 0.2),
+    4px 16px 32px rgba(38, 40, 42, 0.25);
+
+  /* https://utopia.fyi/type/calculator/?c=320,16,1.25,1240,18,1.25,3,1,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l&g=s,l,xl,12 */
+  --font-size-sm: clamp(0.8rem, calc(0.77rem + 0.17vw), 0.9rem);
+  --font-size-m: clamp(1rem, calc(0.96rem + 0.22vw), 1.13rem);
+  --font-size-l: clamp(1.25rem, calc(1.2rem + 0.27vw), 1.41rem);
+  --font-size-xl: clamp(1.95rem, calc(1.87rem + 0.42vw), 2.2rem);
+
+  --font-family-headings: 'Baloo 2', system-ui, sans-serif;
+  --font-family-body: 'Montserrat', system-ui, sans-serif;
 }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
 }
 
 html {
-  font-family: 't26-carbon', system-ui, sans-serif;
-  /* https://matthewjamestaylor.com/responsive-font-size */
-  font-size: calc(18px + 0.390625vw);
+  /* font-family: 't26-carbon', system-ui, sans-serif; */
+  font-family: var(--font-family-body);
+  font-size: var(--font-size-m);
+  letter-spacing: 0.05rem;
+  line-height: 1.3;
 
+  color: var(--clr-gray-600);
   background: var(--clr-gray-200);
-}
-
-.bg-aurora-orange {
-  background: var(--aurora-orange);
-}
-
-.bg-aurora-blue {
-  background: var(--aurora-blue);
 }
 
 ::selection {
   color: var(--clr-gray-200);
   background: var(--clr-accent-r);
+}
+
+h1 {
+  font-family: var(--font-family-headings);
+  font-size: var(--font-size-xl);
+  margin-bottom: 1.5rem;
+}
+
+h2 {
+  font-family: var(--font-family-headings);
+  font-size: var(--font-size-l);
+  margin-bottom: 1.25rem;
+}
+
+h3 {
+  font-family: var(--font-family-headings);
+  font-size: var(--font-size-m);
+  margin-bottom: 1rem;
+}
+
+p:where(:not(:last-child)) {
+  margin-bottom: 1rem;
+}
+
+ul {
+  padding-inline: 1rem;
+  list-style-type: '- ';
+}
+
+a {
+  color: inherit;
+}
+
+ul li:where(:not(:last-child)) {
+  padding-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 1240px) {
+  h2,
+  h3 {
+    text-align: center;
+  }
 }
