Finishing touches to v3

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -59,7 +59,7 @@ const {
     color: var(--clr-accent-t);
   }
 
-  @media screen and (max-width: 1240px) {
+  @media (max-width: 1240px) {
     .card {
       grid-template-columns: 1fr;
       align-items: start;
