--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -60,7 +60,7 @@ import SocialLink from './SocialLink.astro'
     gap: clamp(0.5rem, 0.25rem + 1vw, 1rem);
   }
 
-  @media screen and (max-width: 992px) {
+  @media (max-width: 992px) {
     header {
       padding-inline: 1rem;
     }
