--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -1,8 +1,8 @@
 <section>
   <div class="hello">
     <h1>Hey there!</h1>
-    <p>I'm Brian - a cloud architect and DevOps engineer based in Germany.</p>
-    <p>Scroll on down to find out a bit about me!</p>
+    <p>I'm Brian — a cloud architect and DevOps engineer living in Germany</p>
+    <p>Scroll on down to learn<br />a bit about me!</p>
   </div>
 
   <div class="avatar">
@@ -23,22 +23,23 @@
     margin-inline: auto;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-areas: 'hello avatar';
     gap: 4rem;
     place-items: center;
   }
 
-  p {
-    font-size: var(--font-size-m);
-  }
-
   .hello {
+    grid-area: hello;
     text-align: center;
     text-wrap: balance;
-    max-width: 24ch;
+    max-width: 22ch;
+
+    font-size: var(--font-size-l);
+    line-height: 1.35;
   }
 
   .avatar {
+    grid-area: avatar;
     display: grid;
     align-items: center;
     justify-items: center;
@@ -49,5 +50,17 @@
 
   .avatar img {
     border-radius: 50%;
+  }
+
+  @media (max-width: 992px) {
+    section {
+      grid-template-areas:
+        'avatar'
+        'hello';
+    }
+
+    .hello {
+      align-self: start;
+    }
   }
 </style>
