--- a/src/components/Other.astro
+++ b/src/components/Other.astro
@@ -27,6 +27,9 @@ const tiles = [
     place-items: center;
     min-height: 100dvh;
     text-align: center;
+
+    font-size: var(--font-size-l);
+    line-height: 1.35;
   }
 
   ul {
@@ -34,14 +37,14 @@ const tiles = [
     flex-wrap: wrap;
     justify-content: center;
     gap: 1rem;
-    width: min(90%, 40rem);
+    width: min(90%, 36rem);
     margin-inline: auto;
-    margin-top: 1.5rem;
+    margin-top: 2rem;
   }
 
   li {
     padding: 0.5rem 1rem;
-    font-size: var(--font-size-sm);
+    font-size: var(--font-size-m);
     color: var(--clr-gray-200);
     background: var(--clr-accent-b);
     border-radius: 0.5rem;
