--- a/src/components/Play.astro
+++ b/src/components/Play.astro
@@ -49,7 +49,7 @@ const cards = await Astro.glob<Frontmatter>('../content/play/*.md')
     padding-block: 3rem;
   }
 
-  @media screen and (max-width: 992px) {
+  @media (max-width: 992px) {
     .board {
       grid-template-columns: 1fr;
       grid-template-areas:
