--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,25 +1,25 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Montserrat&display=swap');
+@import url('https://use.typekit.net/ulq6snh.css');
 
 /* AOS */
 @import 'aos/dist/aos.css';
 
 :root {
-  --clr-gray-100: rgb(252, 252, 255); /* Hex: #fcfcff */
-  --clr-gray-200: rgb(239, 239, 244); /* Hex: #efeff4 */
-  --clr-gray-300: rgb(219, 219, 231); /* Hex: #dbdbe7 */
-  --clr-gray-400: rgb(108, 114, 117); /* Hex: #6c7275 */
-  --clr-gray-600: rgb(54, 57, 59); /* Hex: #36393b */
-  --clr-gray-800: rgb(38, 40, 42); /* Hex: #26282a */
+  --clr-gray-100: rgb(252, 252, 255);
+  --clr-gray-200: rgb(239, 239, 244);
+  --clr-gray-300: rgb(219, 219, 231);
+  --clr-gray-400: rgb(108, 114, 117);
+  --clr-gray-600: rgb(54, 57, 59);
+  --clr-gray-800: rgb(38, 40, 42);
 
-  --clr-accent-b: rgb(0, 114, 163); /* Hex: #0072a3 */
-  --clr-accent-g: rgb(97, 231, 134); /* Hex: #61e786 */
-  --clr-accent-m: rgb(179, 60, 134); /* Hex: #b33c86 */
-  --clr-accent-o: rgb(238, 108, 77); /* Hex: #ee6c4d */
-  --clr-accent-p: rgb(155, 119, 187); /* Hex: #9b77bb */
-  --clr-accent-r: rgb(209, 84, 106); /* Hex: #d1546a */
-  --clr-accent-t: rgb(49, 173, 180); /* Hex: #31adb4 */
-  --clr-accent-y: rgb(255, 200, 87); /* Hex: #ffc857 */
+  --clr-accent-b: rgb(0, 114, 163);
+  --clr-accent-g: rgb(97, 231, 134);
+  --clr-accent-m: rgb(179, 60, 134);
+  --clr-accent-o: rgb(238, 108, 77);
+  --clr-accent-p: rgb(155, 119, 187);
+  --clr-accent-r: rgb(209, 84, 106);
+  --clr-accent-t: rgb(49, 173, 180);
+  --clr-accent-y: rgb(255, 200, 87);
 
   --aurora-orange: radial-gradient(
       215.87% 215.87% at -9.39% 100%,
@@ -49,14 +49,15 @@
     2px 4px 8px rgba(38, 40, 42, 0.15), 3px 8px 16px rgba(38, 40, 42, 0.2),
     4px 16px 32px rgba(38, 40, 42, 0.25);
 
-  /* https://utopia.fyi/type/calculator/?c=320,16,1.25,1240,18,1.25,3,1,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l&g=s,l,xl,12 */
-  --font-size-sm: clamp(0.8rem, calc(0.77rem + 0.17vw), 0.9rem);
-  --font-size-m: clamp(1rem, calc(0.96rem + 0.22vw), 1.13rem);
-  --font-size-l: clamp(1.25rem, calc(1.2rem + 0.27vw), 1.41rem);
-  --font-size-xl: clamp(1.95rem, calc(1.87rem + 0.42vw), 2.2rem);
+  /* https://utopia.fyi/type/calculator/?c=320,18,1.25,1240,20,1.25,3,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+  --font-size-sm: clamp(0.9rem, calc(0.87rem + 0.17vw), 1rem);
+  --font-size-m: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+  --font-size-l: clamp(1.41rem, calc(1.35rem + 0.27vw), 1.56rem);
+  --font-size-xl: clamp(1.76rem, calc(1.69rem + 0.34vw), 1.95rem);
+  --font-size-2xl: clamp(2.2rem, calc(2.11rem + 0.42vw), 2.44rem);
 
-  --font-family-headings: 'Baloo 2', system-ui, sans-serif;
-  --font-family-body: 'Montserrat', system-ui, sans-serif;
+  --font-family-headings: 'aptly', system-ui, sans-serif;
+  --font-family-body: 'interstate-condensed', system-ui, sans-serif;
 }
 
 *,
@@ -66,12 +67,11 @@
   margin: 0;
 }
 
-html {
-  /* font-family: 't26-carbon', system-ui, sans-serif; */
+body {
   font-family: var(--font-family-body);
   font-size: var(--font-size-m);
-  letter-spacing: 0.05rem;
-  line-height: 1.3;
+  font-weight: 400;
+  line-height: 1.25;
 
   color: var(--clr-gray-600);
   background: var(--clr-gray-200);
@@ -82,21 +82,25 @@ html {
   background: var(--clr-accent-r);
 }
 
-h1 {
+h1,
+h2,
+h3 {
   font-family: var(--font-family-headings);
-  font-size: var(--font-size-xl);
+  font-weight: 700;
+}
+
+h1 {
+  font-size: var(--font-size-2xl);
   margin-bottom: 1.5rem;
 }
 
 h2 {
-  font-family: var(--font-family-headings);
-  font-size: var(--font-size-l);
+  font-size: var(--font-size-xl);
   margin-bottom: 1.25rem;
 }
 
 h3 {
-  font-family: var(--font-family-headings);
-  font-size: var(--font-size-m);
+  font-size: var(--font-size-l);
   margin-bottom: 1rem;
 }
 
@@ -105,7 +109,7 @@ p:where(:not(:last-child)) {
 }
 
 ul {
-  padding-inline: 1rem;
+  padding-inline: 0.5rem;
   list-style-type: '- ';
 }
 
@@ -117,7 +121,7 @@ ul li:where(:not(:last-child)) {
   padding-bottom: 0.5rem;
 }
 
-@media screen and (max-width: 1240px) {
+@media (max-width: 1240px) {
   h2,
   h3 {
     text-align: center;
