Defer fontawesome loading to improve first paint time

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Play from '../components/Play.astro'
     <link rel="manifest" href="/site.webmanifest" />
     <script
       src="https://kit.fontawesome.com/34d36e55e2.js"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous" defer></script>
     <script>
       import AOS from 'aos'
       AOS.init({
