--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,31 @@ import Play from '../components/Play.astro'
     <link rel="preconnect" href="https://use.typekit.net" crossorigin />
     <link rel="preconnect" href="https://ka-p.fontawesome.com" crossorigin />
 
-    <link rel="stylesheet" href="https://use.typekit.net/ulq6snh.css" />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link
+      rel="preload"
+      href="https://use.typekit.net/ulq6snh.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://use.typekit.net/ulq6snh.css"
+      /></noscript
+    >
+
+    <link
+      rel="preload"
+      href="https://unpkg.com/aos@next/dist/aos.css"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://unpkg.com/aos@next/dist/aos.css"
+      /></noscript
+    >
 
     <script
       defer
