Widen code print width

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -6,12 +6,7 @@
   </div>
 
   <div class="avatar">
-    <img
-      src="/img/profile.webp"
-      width="275"
-      height="275"
-      alt="Brian Kintz"
-    />
+    <img src="/img/profile.webp" width="275" height="275" alt="Brian Kintz" />
   </div>
 </section>
 
