--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -18,7 +18,9 @@ const { brand, href } = Astro.props
     padding: 0.125rem 0.25rem;
     border-radius: 0.5rem;
     color: inherit;
-    transition: color 150ms ease-in, box-shadow 150ms ease-in;
+    transition:
+      color 150ms ease-in,
+      box-shadow 150ms ease-in;
   }
 
   a:hover {
