--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Other from '../components/Other.astro'
 import Play from '../components/Play.astro'
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -36,17 +36,9 @@ import Play from '../components/Play.astro'
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <noscript
-      ><link
-        rel="stylesheet"
-        href="https://use.typekit.net/ulq6snh.css"
-      /></noscript
-    >
+    <noscript><link rel="stylesheet" href="https://use.typekit.net/ulq6snh.css" /></noscript>
 
-    <script
-      defer
-      src="https://kit.fontawesome.com/34d36e55e2.js"
-      crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/34d36e55e2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <Header />
