Set fixed profile image size

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -11,7 +11,7 @@ import profile from '../content/img/briankintz.png'
   </div>
 
   <div class="avatar">
-    <Image src={profile} alt="Brian Kintz" />
+    <Image src={profile} width="400" alt="Brian Kintz" />
 
     <svg width="0" height="0" viewBox="0 0 1 1" xmlns="http://www.w3.org/2000/svg">
       <defs>
@@ -54,8 +54,6 @@ import profile from '../content/img/briankintz.png'
   }
 
   .avatar img {
-    width: 26rem;
-    height: auto;
     clip-path: url(#profile-clip);
   }
 
