Make profile image border bolder

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -49,8 +49,8 @@ import profile from '../content/img/briankintz.png'
 
   .avatar {
     grid-area: avatar;
-    filter: drop-shadow(0.2rem 0.2rem 2px rgba(179, 60, 134, 0.7))
-      drop-shadow(0.2rem -0.3rem 2px rgba(155, 119, 187, 0.7)) drop-shadow(-0.3rem 0 2px rgba(238, 108, 77, 0.7));
+    filter: drop-shadow(-1rem 2rem 0 rgba(179, 60, 134, 0.8)) drop-shadow(-1rem -2rem 0 rgba(238, 108, 77, 0.9))
+      drop-shadow(2rem 0 0 rgba(155, 119, 187, 0.8));
   }
 
   .avatar img {
