Update Instagram link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@ import SocialLink from './SocialLink.astro'
   </a>
 
   <div class="social-icons">
-    <SocialLink brand="instagram" href="https://www.instagram.com/brr.ian/" />
+    <SocialLink brand="instagram" href="https://www.instagram.com/brian.kintz/" />
     <SocialLink brand="github" href="https://github.com/briankintz" />
     <SocialLink brand="linkedin" href="https://www.linkedin.com/in/bkintz" />
   </div>
